--- a/src/index.scss
+++ b/src/index.scss
@@ -1,2 +1,4 @@
 @import url(../src/Components/App/App.scss);
 @import url(../src/Components/Search/Search.scss);
+@import url(../src/Components/CardsList/CardsList.scss);
+@import url(../src/Components/Card/Card.scss);
