--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,6 @@
+@import url(../src/vendor/fonts/Inter/inter.scss);
 @import url(../src/Components/App/App.scss);
 @import url(../src/Components/Search/Search.scss);
 @import url(../src/Components/CardsList/CardsList.scss);
 @import url(../src/Components/Card/Card.scss);
+@import url(../src/Components/CardPopup/CardPopup.scss);
