--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -3,6 +3,13 @@ $background-content: rgb(107, 103, 103);
 
 .page {
   background-color: $background-root;
+  font-family: 'Inter', 'Suisse', 'Arial', 'Helvetica', sans-serif;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    text-rendering: optimizeLegibility;
 }
 
 .main {
