feat: added close by overlay click to popup

--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -1,5 +1,9 @@
 $background-root: rgb(44, 42, 42);
-$background-content: rgb(107, 103, 103);
+$background-content: rgb(129, 124, 124);
+
+body {
+  margin: 0;
+}
 
 .page {
   background-color: $background-root;
