--- a/src/Components/Search/Search.scss
+++ b/src/Components/Search/Search.scss
@@ -3,21 +3,26 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 30px;
+    height: 35px;
     padding: 0 8px;
     padding-right: 0;
     border-radius: 50px;
     border: solid 1px;
     background-color: #fff;
-    box-sizing: border-box;
+    box-sizing: content-box;
+    border: 3px solid #e49d8a;
+    margin-bottom: 10px;
+    position: relative;
 }
 
 .search__input {
-    height: 20px;
+    height: 100%;
     width: 95%;
     border: none;
     padding: 0;
     outline: none;
+    font-size: 20px;
+    line-height: 121%;
 }
 
 .search__button {
@@ -30,4 +35,11 @@
     height: 25px;
     width: 25px;
     background-image: url(../../images/find-button.png);
+}
+
+.search__error {
+    text-align: center;
+    position: absolute;
+    top: 60px;
+    color: #e49d8a;
 }
